--- a/src/templates/admins.html
+++ b/src/templates/admins.html
@@ -39,6 +39,6 @@
         readonly
         class="form-control"
         ng-style="{'height':'100%'}"
-    > {{ controller.Response | json }} </pre>
+    > {{ ctrl.Response | json }} </pre>
     <hr>
 </div>
