--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4">
         <login-form ng-show="twoFactor === 0"></login-form>
         <login-two-factor-form ng-show="twoFactor === 1"></login-two-factor-form>
     </div>
